--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation2"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_profile">
 
     <fragment
         android:id="@+id/navigation_home"
@@ -17,11 +17,11 @@
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_notification"-->
-<!--        android:name="com.teamred.checkmate.ui.notifications.NotificationsFragment"-->
-<!--        android:label="@string/title_notifications"-->
-<!--        tools:layout="@layout/fragment_notifications" />-->
+    <!--    <fragment-->
+    <!--        android:id="@+id/navigation_notification"-->
+    <!--        android:name="com.teamred.checkmate.ui.notifications.NotificationsFragment"-->
+    <!--        android:label="@string/title_notifications"-->
+    <!--        tools:layout="@layout/fragment_notifications" />-->
     <fragment
         android:id="@+id/navigation_chat"
         android:name="com.teamred.checkmate.ui.chat.ChatFragment"
