--- a/app/src/main/res/layout/chat_row.xml
+++ b/app/src/main/res/layout/chat_row.xml
@@ -31,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
+        android:paddingLeft="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toEndOf="@+id/chatAvatar"
         app:layout_constraintTop_toBottomOf="@+id/otherUsername"
