--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,10 +12,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home"/>
 
-<!--    <item-->
-<!--        android:id="@+id/navigation_chat"-->
-<!--        android:icon="@drawable/chat"-->
-<!--        android:title="@string/title_chat"/>-->
+    <item
+        android:id="@+id/navigation_chat"
+        android:icon="@drawable/chat"
+        android:title="@string/title_chat"/>
 
     <item
         android:id="@+id/navigation_search"
