In the process of getting all groups to render, currently finished writing query to firebase, need to do list view stuff now

--- a/app/src/main/res/layout/activity_my_groups.xml
+++ b/app/src/main/res/layout/activity_my_groups.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="5dp" />
 
     <ListView
-        android:id="@+id/lvMonth"
+        android:id="@+id/lvGroups"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
