Fixed small date misprint

--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -83,18 +83,18 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/group_detail_creator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="creator" />
+
+            <TextView
                 android:id="@+id/group_detail_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="3"
                 android:text="desc" />
-
-            <TextView
-                android:id="@+id/group_detail_creator"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="creator" />
 
             <View
                 android:layout_width="fill_parent"
@@ -108,7 +108,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="5 Available Threads" />
+                android:text="5 Available Threads"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
@@ -119,6 +120,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
