--- a/app/src/main/res/layout/fragment_profile_edit1.xml
+++ b/app/src/main/res/layout/fragment_profile_edit1.xml
@@ -11,61 +11,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="21dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:rotationX="4"
         android:text="R.drawable.background)"
-        app:layout_constraintBottom_toTopOf="@+id/eName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/eName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/eUsername"
-        app:layout_constraintStart_toStartOf="@+id/photourl"
-        app:layout_constraintTop_toBottomOf="@+id/photourl" />
-
-    <EditText
-        android:id="@+id/eAboutme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="About me:"
-        app:layout_constraintStart_toStartOf="@+id/eUsername"
-        app:layout_constraintTop_toBottomOf="@+id/eUsername" />
-
-    <EditText
         android:id="@+id/eUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="84dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Username"
-        app:layout_constraintBottom_toTopOf="@+id/eAboutme"
-        app:layout_constraintStart_toStartOf="@+id/eName"
-        app:layout_constraintTop_toBottomOf="@+id/eName" />
+        app:layout_constraintTop_toBottomOf="@+id/photourl"
+        tools:layout_editor_absoluteX="100dp" />
 
     <Button
         android:id="@+id/save"
         android:layout_width="404dp"
         android:layout_height="46dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="304dp"
+        android:backgroundTint="#2196F3"
         android:text="save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/eUsername" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
