Redesign profile page xml

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,43 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
 
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="112dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/profileheader" />
+
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.45"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:id="@+id/background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/gradient" />
-
-    </FrameLayout>
-
-    <Button
-        android:id="@+id/edit_profile_btn"
-        android:layout_width="82dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="54dp"
-        android:backgroundTint="@color/blue_a100"
-        android:text="Edit"
-        app:layout_constraintStart_toEndOf="@+id/p_pic"
-        app:layout_constraintTop_toBottomOf="@+id/chat_btn" />
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/p_pic"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/profile_no_img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/reviewList"
@@ -50,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="98dp"
         android:layout_marginEnd="98dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="14dp"
         android:text="Things to Review Today"
         android:textColor="#5C6BC0"
         android:textSize="20sp"
@@ -60,79 +39,99 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/aboutme_tv"
-        android:layout_width="300dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="71dp"
-        android:gravity="center|top|left"
-        android:text="about me content goes here"
-        android:textColor="#515151"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/p_pic"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:background="@drawable/imageview_white_border"
+        android:padding="5dp"
+        android:src="@drawable/profile_no_img"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_tv" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.125" />
+
+    <Button
+        android:id="@+id/edit_profile_btn"
+        android:layout_width="120dp"
+        android:layout_height="44dp"
+        android:backgroundTint="@color/blue_a100"
+        android:text="Edit profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/background"
+        app:layout_constraintVertical_bias="0.197" />
 
     <TextView
         android:id="@+id/username_tv"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="username"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/numgroupsjoined"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/p_pic"
-        tools:layout_editor_absoluteX="168dp" />
-
+        app:layout_constraintVertical_bias="0.333" />
 
     <TextView
         android:id="@+id/numgroupsjoined"
-        android:layout_width="300dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginEnd="71dp"
+        android:layout_width="99dp"
+        android:layout_height="22dp"
         android:gravity="center|top|left"
         android:text="8 groups joined"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#515151"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/aboutme_tv" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.296" />
 
     <ImageButton
         android:id="@+id/chat_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="80dp"
         android:backgroundTint="#03A9F4"
         android:minHeight="48dp"
         android:src="@drawable/ic_baseline_chat_24"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ListView
         android:id="@+id/reminderlist"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.5"
+        android:layout_width="413dp"
+        android:layout_height="419dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/signout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="#29B6F6"
         android:rotation="180"
         android:src="@drawable/ic_baseline_exit_to_app_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/imageview_white_border"
-        android:padding="10dp" />
+        app:layout_constraintVertical_bias="0.023" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
