--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -15,13 +15,13 @@
         android:orientation="horizontal"
         android:paddingHorizontal="10dp">
 
-        <ImageView
-            android:id="@+id/addMessageImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            ads:srcCompat="@drawable/outline_add_photo_alternate_24" />
+<!--        <ImageView-->
+<!--            android:id="@+id/addMessageImageView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:visibility="invisible"-->
+<!--            ads:srcCompat="@drawable/outline_add_photo_alternate_24" />-->
 
         <EditText
             android:id="@+id/messageEditText"
@@ -53,11 +53,31 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
 
+    <TextView
+        android:id="@+id/chat_with_whom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/blue_600"
+        android:elevation="5dp"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:shadowColor="@color/black"
+        android:shadowDy="3"
+        android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messageRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/linearLayout"
+        android:layout_below="@id/chat_with_whom"
         android:background="@android:color/white"
-        android:paddingHorizontal="16dp" />
+        android:paddingHorizontal="16dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
