--- a/app/src/main/res/layout/fragment_profile_edit1.xml
+++ b/app/src/main/res/layout/fragment_profile_edit1.xml
@@ -7,34 +7,24 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <EditText
-        android:id="@+id/photourl"
+        android:id="@+id/eUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="145dp"
+        android:layout_marginBottom="96dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:rotationX="4"
-        android:text="R.drawable.background)"
+        android:text="Username"
+        app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/eUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Username"
-        app:layout_constraintTop_toBottomOf="@+id/photourl"
-        tools:layout_editor_absoluteX="100dp" />
-
     <Button
         android:id="@+id/save"
         android:layout_width="404dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="304dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="399dp"
         android:backgroundTint="#2196F3"
         android:text="save"
         app:layout_constraintBottom_toBottomOf="parent"
