--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -113,8 +113,10 @@
 
     <ListView
         android:id="@+id/reminderlist"
-        android:layout_width="370dp"
+        android:layout_width="match_parent"
         android:layout_height="422dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
