--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -115,14 +115,16 @@
 
     <ListView
         android:id="@+id/reminderlist"
-        android:layout_width="match_parent"
-        android:layout_height="422dp"
+        android:layout_width="370dp"
+        android:layout_height="383dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/background"
+        app:layout_constraintVertical_bias="0.913" />
 
     <ImageButton
         android:id="@+id/signout_btn"
