--- a/app/src/main/res/layout/main_calendar_tab.xml
+++ b/app/src/main/res/layout/main_calendar_tab.xml
@@ -29,7 +29,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/compactcalendar_view"
         android:layout_alignParentLeft="true"
-        android:layout_margin="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/roundedbutton"
         android:text="Prev" />
 
